Issue #6728 - QUIC and HTTP/3
- Trying to replicate test failures.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>